...
      return;
    }
    setPage(page + 1);
    fetchPosts();
  };
  return (
    <View style={styles.container} testID='postScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={postList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
