...
      return;
    }
    setPage(page + 1);
    fetchRankGroups();
  };
  return (
    <View style={styles.container} testID='rankGroupScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={rankGroupList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
